--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,41 @@ cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 project(diso C CXX)
 
 find_package(PkgConfig REQUIRED)
+set(ENV{PKG_CONFIG_LIBDIR} "${ARIA2_DEPS_ROOT}/usr/local/lib")
+set(ENV{PKG_CONFIG_PATH} "${ARIA2_DEPS_ROOT}/usr/local/lib/pkgconfig")
+set(PKG_CONFIG_PATH "${ARIA2_DEPS_ROOT}/usr/local/lib/pkgconfig")
+
+set(LIBSSH2_PC "${PKG_CONFIG_PATH}/libssh2.pc")
+file(STRINGS ${LIBSSH2_PC} LIBSSH2_PC_FILE)
+set(LIBSSH2_PC_FILE_PATCHED "${LIBSSH2_PC}.patched")
+file(REMOVE ${LIBSSH2_PC_FILE_PATCHED})
+while(LIBSSH2_PC_FILE)
+    list(POP_FRONT LIBSSH2_PC_FILE LINE)
+    string(REPLACE "/Users/runner/work/aria2-deps/aria2-deps/deps/openssl/" "/" REPLACED_LINE "${LINE}")
+    file(APPEND "${LIBSSH2_PC_FILE_PATCHED}" "${REPLACED_LINE}\n")
+endwhile()
+file(RENAME ${LIBSSH2_PC_FILE_PATCHED} ${LIBSSH2_PC})
+
 pkg_check_modules(PKG_ARIA2 REQUIRED libaria2)
 pkg_check_modules(PKG_LIBXML2 REQUIRED libxml-2.0)
 pkg_check_modules(PKG_OpenSSL REQUIRED OpenSSL)
 pkg_check_modules(PKG_LIBSSH2 REQUIRED libssh2)
 pkg_check_modules(PKG_LIBCARES REQUIRED libcares)
 pkg_check_modules(PKG_SQLITE3 REQUIRED sqlite3)
+
+set(PKG_ARIA2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_ARIA2_INCLUDE_DIRS}")
+set(PKG_LIBXML2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBXML2_INCLUDE_DIRS}")
+set(PKG_OpenSSL_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_OpenSSL_INCLUDE_DIRS}")
+set(PKG_LIBSSH2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBSSH2_INCLUDE_DIRS}")
+set(PKG_LIBCARES_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBCARES_INCLUDE_DIRS}")
+set(PKG_SQLITE3_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_SQLITE3_INCLUDE_DIRS}")
+
+set(PKG_ARIA2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_ARIA2_LIBRARY_DIRS}")
+set(PKG_LIBXML2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBXML2_LIBRARY_DIRS}")
+set(PKG_OpenSSL_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_OpenSSL_LIBRARY_DIRS}")
+set(PKG_LIBSSH2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBSSH2_LIBRARY_DIRS}")
+set(PKG_LIBCARES_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBCARES_LIBRARY_DIRS}")
+set(PKG_SQLITE3_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_SQLITE3_LIBRARY_DIRS}")
 
 set(CMAKE_CXX_STANDARD 23)
 add_executable(diso
