--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 project(diso C CXX)
 
+set (THREADS_PREFER_PTHREAD_FLAG ON)
+find_package (Threads REQUIRED)
+
 find_package(PkgConfig REQUIRED)
 set(PKG_CONFIG_LIBDIR "${ARIA2_DEPS_ROOT}/usr/local/lib")
 set(PKG_CONFIG_PATH "${ARIA2_DEPS_ROOT}/usr/local/lib/pkgconfig")
@@ -24,6 +27,7 @@ pkg_check_modules(PKG_OpenSSL REQUIRED openssl)
 pkg_check_modules(PKG_LIBSSH2 REQUIRED libssh2)
 pkg_check_modules(PKG_LIBCARES REQUIRED libcares)
 pkg_check_modules(PKG_SQLITE3 REQUIRED sqlite3)
+pkg_check_modules(PKG_ZLIB REQUIRED zlib)
 
 set(PKG_ARIA2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_ARIA2_INCLUDE_DIRS}")
 set(PKG_LIBXML2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBXML2_INCLUDE_DIRS}")
@@ -31,6 +35,7 @@ set(PKG_OpenSSL_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_OpenSSL_INCLUDE_DIRS}")
 set(PKG_LIBSSH2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBSSH2_INCLUDE_DIRS}")
 set(PKG_LIBCARES_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBCARES_INCLUDE_DIRS}")
 set(PKG_SQLITE3_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_SQLITE3_INCLUDE_DIRS}")
+set(PKG_ZLIB_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_ZLIB_INCLUDE_DIRS}")
 
 set(PKG_ARIA2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_ARIA2_LIBRARY_DIRS}")
 set(PKG_LIBXML2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBXML2_LIBRARY_DIRS}")
@@ -38,6 +43,7 @@ set(PKG_OpenSSL_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_OpenSSL_LIBRARY_DIRS}")
 set(PKG_LIBSSH2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBSSH2_LIBRARY_DIRS}")
 set(PKG_LIBCARES_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBCARES_LIBRARY_DIRS}")
 set(PKG_SQLITE3_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_SQLITE3_LIBRARY_DIRS}")
+set(PKG_ZLIB_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_ZLIB_LIBRARY_DIRS}")
 
 set(CMAKE_CXX_STANDARD 23)
 add_executable(diso
@@ -67,6 +73,7 @@ target_link_libraries(diso
     ${PKG_LIBSSH2_LIBRARIES}
     ${PKG_LIBCARES_LIBRARIES}
     ${PKG_SQLITE3_LIBRARIES}
+    Threads::Threads
 )
 target_compile_options(diso PUBLIC
     ${PKG_ARIA2_CFLAGS_OTHER}
@@ -77,13 +84,13 @@ target_compile_options(diso PUBLIC
     ${PKG_SQLITE3_CFLAGS_OTHER}
 )
 
-file(COPY ${PKG_CONFIG_LIBDIR} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-
 if(UNIX AND NOT APPLE)
     set_target_properties(diso PROPERTIES INSTALL_RPATH "\$ORIGIN/lib:\$ORIGIN/lib64")
 elseif(UNIX AND APPLE)
     set_target_properties(diso PROPERTIES INSTALL_RPATH "@loader_path/lib")
 endif()
+
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ldl")
 
 if(WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /wd4996 /wd4267 /wd4068")
