--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,26 @@ set (THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 find_library(DLPATH NAMES libdl.so dl)
 
+if(UNIX AND APPLE)
+    set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-apple-darwin")
+elseif(UNIX AND NOT APPLE)
+    if("${CMAKE_HOST_SYSTEM_PROCESSOR}" EQUAL "arm")
+        set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-linux-gnueabihf")
+    else()
+        set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-linux-gnu")
+    endif()
+else()
+    message(FATAL "Platform not supported")
+endif()
+
+if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/usr/local/bin")
+    if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/aria2-deps-${ARIA2_TRIPLET}.tar.gz")
+        file(DOWNLOAD "https://github.com/uwulab/aria2-deps/releases/download/v20231026/aria2-deps-${ARIA2_TRIPLET}.tar.gz" "${CMAKE_CURRENT_BINARY_DIR}/aria2-deps-${ARIA2_TRIPLET}.tar.gz" SHOW_PROGRESS)
+    endif()
+    file(ARCHIVE_EXTRACT INPUT "${CMAKE_CURRENT_BINARY_DIR}/aria2-deps-${ARIA2_TRIPLET}.tar.gz" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+endif()
+set(ARIA2_DEPS_ROOT "${CMAKE_CURRENT_BINARY_DIR}")
+
 find_package(PkgConfig REQUIRED)
 set(PKG_CONFIG_LIBDIR "${ARIA2_DEPS_ROOT}/usr/local/lib")
 set(PKG_CONFIG_PATH "${ARIA2_DEPS_ROOT}/usr/local/lib/pkgconfig")
