--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,10 @@ set(ARIA2_DEPS_ROOT "${CMAKE_CURRENT_BINARY_DIR}")
 find_package(PkgConfig REQUIRED)
 set(PKG_CONFIG_LIBDIR "${ARIA2_DEPS_ROOT}/usr/local/lib")
 set(PKG_CONFIG_PATH "${ARIA2_DEPS_ROOT}/usr/local/lib/pkgconfig")
-set(ENV{PKG_CONFIG_LIBDIR} "${PKG_CONFIG_LIBDIR}")
-set(ENV{PKG_CONFIG_PATH} "${PKG_CONFIG_PATH}")
+set(PKG_CONFIG_LIBDIR_64 "${ARIA2_DEPS_ROOT}/usr/local/lib64")
+set(PKG_CONFIG_PATH_64 "${ARIA2_DEPS_ROOT}/usr/local/lib64/pkgconfig")
+set(ENV{PKG_CONFIG_LIBDIR} "${PKG_CONFIG_LIBDIR}:${PKG_CONFIG_LIBDIR_64}")
+set(ENV{PKG_CONFIG_PATH} "${PKG_CONFIG_PATH}:${PKG_CONFIG_PATH_64}")
 
 set(LIBSSH2_PC "${PKG_CONFIG_PATH}/libssh2.pc")
 file(STRINGS ${LIBSSH2_PC} LIBSSH2_PC_FILE)
