--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: build
         run: |
+          brew install gettext
           mkdir build
           cd build
           cmake ..
