--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set (THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 find_library(DLPATH NAMES libdl.so dl)
 find_library(RESOLV_PATH NAMES libresolv.so resolv)
+if(UNIX AND APPLE)
+  find_package(Intl REQUIRED)
+endif()
 
 if(UNIX AND APPLE)
     set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-apple-darwin")
@@ -74,15 +77,6 @@ add_executable(diso
     "src/main.cpp"
 )
 target_include_directories(diso PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/3rd_party")
-target_include_directories(diso PUBLIC
-    ${PKG_ARIA2_INCLUDE_DIRS}
-    ${PKG_LIBXML2_INCLUDE_DIRS}
-    ${PKG_OpenSSL_INCLUDE_DIRS}
-    ${PKG_LIBSSH2_INCLUDE_DIRS}
-    ${PKG_LIBCARES_INCLUDE_DIRS}
-    ${PKG_SQLITE3_INCLUDE_DIRS}
-    ${PKG_ZLIB_INCLUDE_DIRS}
-)
 target_link_directories(diso PUBLIC
     ${PKG_ARIA2_LIBRARY_DIRS}
     ${PKG_LIBXML2_LIBRARY_DIRS}
@@ -91,18 +85,6 @@ target_link_directories(diso PUBLIC
     ${PKG_LIBCARES_LIBRARY_DIRS}
     ${PKG_SQLITE3_LIBRARY_DIRS}
     ${PKG_ZLIB_LIBRARY_DIRS}
-)
-target_link_libraries(diso
-    ${PKG_ARIA2_LIBRARIES}
-    ${PKG_LIBXML2_LIBRARIES}
-    ${PKG_OpenSSL_LIBRARIES}
-    ${PKG_LIBSSH2_LIBRARIES}
-    ${PKG_LIBCARES_LIBRARIES}
-    ${PKG_SQLITE3_LIBRARIES}
-    ${PKG_ZLIB_LIBRARIES}
-    Threads::Threads
-    ${DLPATH}
-    ${RESOLV_PATH}
 )
 target_compile_options(diso PUBLIC
     ${PKG_ARIA2_CFLAGS_OTHER}
@@ -113,6 +95,54 @@ target_compile_options(diso PUBLIC
     ${PKG_SQLITE3_CFLAGS_OTHER}
     ${PKG_ZLIB_CFLAGS_OTHER}
 )
+if(UNIX AND APPLE)
+  find_package(Intl REQUIRED)
+  target_include_directories(diso PUBLIC
+    ${PKG_ARIA2_INCLUDE_DIRS}
+    ${PKG_LIBXML2_INCLUDE_DIRS}
+    ${PKG_OpenSSL_INCLUDE_DIRS}
+    ${PKG_LIBSSH2_INCLUDE_DIRS}
+    ${PKG_LIBCARES_INCLUDE_DIRS}
+    ${PKG_SQLITE3_INCLUDE_DIRS}
+    ${PKG_ZLIB_INCLUDE_DIRS}
+    ${Intl_INCLUDE_DIRS}
+  )
+  target_link_libraries(diso
+    ${PKG_ARIA2_LIBRARIES}
+    ${PKG_LIBXML2_LIBRARIES}
+    ${PKG_OpenSSL_LIBRARIES}
+    ${PKG_LIBSSH2_LIBRARIES}
+    ${PKG_LIBCARES_LIBRARIES}
+    ${PKG_SQLITE3_LIBRARIES}
+    ${PKG_ZLIB_LIBRARIES}
+    Threads::Threads
+    ${DLPATH}
+    ${RESOLV_PATH}
+    ${Intl_LIBRARIES}
+  )
+else()
+  target_include_directories(diso PUBLIC
+    ${PKG_ARIA2_INCLUDE_DIRS}
+    ${PKG_LIBXML2_INCLUDE_DIRS}
+    ${PKG_OpenSSL_INCLUDE_DIRS}
+    ${PKG_LIBSSH2_INCLUDE_DIRS}
+    ${PKG_LIBCARES_INCLUDE_DIRS}
+    ${PKG_SQLITE3_INCLUDE_DIRS}
+    ${PKG_ZLIB_INCLUDE_DIRS}
+  )
+  target_link_libraries(diso
+    ${PKG_ARIA2_LIBRARIES}
+    ${PKG_LIBXML2_LIBRARIES}
+    ${PKG_OpenSSL_LIBRARIES}
+    ${PKG_LIBSSH2_LIBRARIES}
+    ${PKG_LIBCARES_LIBRARIES}
+    ${PKG_SQLITE3_LIBRARIES}
+    ${PKG_ZLIB_LIBRARIES}
+    Threads::Threads
+    ${DLPATH}
+    ${RESOLV_PATH}
+  )
+endif()
 
 if(UNIX AND NOT APPLE)
     set_target_properties(diso PROPERTIES INSTALL_RPATH "\$ORIGIN/lib:\$ORIGIN/lib64")
