--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,4 +27,4 @@ jobs:
           mkdir build
           cd build
           cmake ..
-          make -j `nproc`
+          make -j `sysctl -n hw.ncpu`
